--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-06-19 19:03+0100\n"
-"PO-Revision-Date: 2017-06-19 19:38+0100\n"
+"POT-Creation-Date: 2017-06-19 19:45+0100\n"
+"PO-Revision-Date: 2017-06-19 19:46+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -574,7 +574,7 @@ msgstr "Quais são os requisitos para utilizar o sistema?"
 #: mymwebsite/templates/faq.html:129
 msgid ""
 "To fully use the MyMensor Mobile App you need a smartphone with at least "
-"Android Lolipop installed, you can use it with KitKat but usage will suffer "
+"Android Lollipop installed, you can use it with KitKat but usage will suffer "
 "and not all features will be present."
 msgstr ""
 "Para utilizar plenamente o MyMensor Mobile App, você precisa de pelo menos "
@@ -649,7 +649,7 @@ msgstr ""
 "MyMensor Mobile App - Capturando Imagens e Vídeos"
 
 #: mymwebsite/templates/faq.html:200
-msgid "Where can I find more details abot the MyMensor Web App?"
+msgid "Where can I find more details about the MyMensor Web App?"
 msgstr "Onde posso encontrar mais detalhes sobre o MyMensor Web App?"
 
 #: mymwebsite/templates/faq.html:206
@@ -944,8 +944,8 @@ msgstr ""
 
 #: mymwebsite/templates/faq.html:468
 msgid ""
-"Then go to the Configure menu item and select the VPs item. You must check "
-"the share box in each of the VP folders that you want to share automatically."
+"Then go to the Setup menu item and select the VPs item. You must check the "
+"share box in each of the VP folders that you want to share automatically."
 msgstr ""
 "Em seguida, vá para o item de menu Configurar e selecione o item VPs. Você "
 "deve marcar a caixa de compartilhamento em cada uma das pastas de VPs que "
